--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -33,13 +33,21 @@
                             </ul>
                         </li>
                     </ul>
-                    <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Cart
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                        </button>
-                    </form>
+                    {% if user.is_authenticated %}
+                        <form class="d-flex">
+                            <button class="btn btn-outline-dark" type="submit">
+                                <i class="bi-cart-fill me-1"></i>
+                                Cart
+                                <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                            </button>
+                        </form>
+                    {% else %}  
+                        <form class="d-flex ms-2">
+                            <button class="btn btn-outline-dark" type="submit">
+                                <a href="{% url 'register' %}">Sign up</a>
+                            </button>
+                        </form>
+                    {% endif %}
                 </div>
             </div>
         </nav>
