--- a/templates/base/view_product.html
+++ b/templates/base/view_product.html
@@ -10,16 +10,17 @@
                         <h1 class="display-5 fw-bolder">{{product.product}}</h1>
                         <div class="fs-5 mb-5">
                             <!--<span class="text-decoration-line-through">$45.00</span>   class for off price -->
-                            <span id="final-price">${{product.base_price}}</span>
+                            <div class="fs-5 mb-5">
+                                <span id="price">{{ product.price }}</span> USD
+                            </div>
                         </div>
-                            <!--product options-->
-                        <div class="fs-5 mb-5">
-                            <select id="the-id" onchange="updatePrice()">
-                                {% for user_amount,price in product.users_amount_prices.items %}
-                                    <option value="{{ user_amount.id }}" data-price="{{ price }}">{{user_amount}}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
+                            <!--product specs-->
+                            <h3 class="">
+                                time_limit:{{ product.period }}
+                            </h3>
+                            <h3 class="">
+                                user_amount:{{ product.max_users }}
+                            </h3>
                         <p class="lead">{{product.description}}</p>
                         <div class="d-flex">
                             <button class="btn btn-outline-dark flex-shrink-0" type="button">
@@ -64,6 +65,7 @@
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
+        <!-- ajax call-->
+        <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
         <script src="{% static '/base/js/detail_script.js' %}"></script>
 {% endblock %}
