--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -34,17 +34,25 @@
                         </li>
                     </ul>
                     {% if user.is_authenticated %}
-                        <form class="d-flex">
+                    <div class="buttons">
                             <button class="btn btn-outline-dark" type="submit">
                                 <i class="bi-cart-fill me-1"></i>
                                 Cart
                                 <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                             </button>
-                        </form>
+                        
+                        <a href="{% url 'logout' %}" style="margin-left: 10px;">
+                            <!--<img src="{% static '/base/assets/logout-svgrepo-com.svg' %}" style="height: 1%; width: 1%;"> -->
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="Black" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+                                <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+                            </svg>
+                        </a>
+                    </div>
                     {% else %}  
                         <form class="d-flex ms-2">
-                            <button class="btn btn-outline-dark" type="submit">
-                                <a href="{% url 'register' %}">Sign up</a>
+                            <button class="btn btn-outline-dark link" type="submit">
+                                <a class="link" href="{% url 'register' %}">Sign up</a>
                             </button>
                         </form>
                     {% endif %}
