created-most-viewed-products

--- a/templates/base/view_product.html
+++ b/templates/base/view_product.html
@@ -7,6 +7,7 @@
                 <div class="row gx-4 gx-lg-5 align-items-center">
                     <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="{{product.pic_sample.url}}" /></div>
                     <div class="col-md-6">
+                        views: {{object.hits.count}}
                         <h1 class="display-5 fw-bolder">{{product.product}}</h1>
                         <div class="fs-5 mb-5">
                             <!--<span class="text-decoration-line-through">$45.00</span>   class for off price -->
