--- a/templates/base/list_page.html
+++ b/templates/base/list_page.html
@@ -1,6 +1,23 @@
-{% extends 'base/navbar.html' %}
 {% load static %}
-{% block content %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Shop Item - Start Bootstrap Template</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="{% static '/base/assets/favicon.ico' %}" />
+        <!-- Bootstrap icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="{% static '/base/css/detail.css' %}" rel="stylesheet" />
+    </head>
+    <body>
+        <!--Navbar-->
+        {% include 'base/navbar.html' %}
+        <!--Website Recents-->
         {% include 'base/header.html' %}
         <!-- Section-->
         <section class="py-5">
@@ -36,4 +53,5 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="{% static '/base/js/scripts.js' %}"></script>
-{% endblock %}
+    </body>
+</html>
