--- a/templates/base/view_product.html
+++ b/templates/base/view_product.html
@@ -1,4 +1,4 @@
-{% extends "star_ratings/widget_base.html" %}
+{% extends "star_ratings/widget.html" %}
 {% load static %}
 {% load ratings %}
 {% block rating_detail %}
