--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -22,7 +22,7 @@
 					</div>
 					<input type="submit" value="LOGIN">
 				</form>
-				<p>Don't have an Account? <a href="{% url 'register' %}"> SignUp Now!</a></p>
+				<p>Don't have an Account? <a href="{% url 'user:register' %}"> SignUp Now!</a></p>
 			</div>
 		</div>
 	<!-- //main --> 
