--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -22,7 +22,7 @@
 					</div>
 					<input type="submit" value="SIGNUP">
 				</form>
-				<p>Have an Account? <a href="{% url 'login' %}"> Login Now!</a></p>
+				<p>Have an Account? <a href="{% url 'user:login' %}"> Login Now!</a></p>
 			</div>
 		</div>
 	<!-- //main --> 
