--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,6 +1,16 @@
 {% load static %}
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="user-profile-container" style="margin-left: 30px; border: 2px solid lightgrey; border-radius: 12px; padding:3px;">
+                {% if username %}
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ username }}</span>
+                {% endif %}
+                {% if user_profile %}
+                    <img src="{{ user_profile.url }}" alt="Avatar" class="avatar" style="width: 50px; height: 50px; border-radius: 50%;">
+                {% else %}
+                    <img src="{% static 'user/img/noun-user-avatar-2540366.svg' %}" alt="Avatar" class="avatar" style="width: 50px; height: 50px; border-radius: 50%;">
+                {% endif %}
+            </div>
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="{% url 'base:home' %}">Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -26,7 +36,7 @@
                                 <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                             </button>
                         
-                        <a href="{% url 'logout' %}" style="margin-left: 10px;">
+                        <a href="{% url 'user:logout' %}" style="margin-left: 10px;">
                             <!--<img src="{% static '/base/assets/logout-svgrepo-com.svg' %}" style="height: 1%; width: 1%;"> -->
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="Black" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
@@ -37,7 +47,7 @@
                     {% else %}  
                         <form class="d-flex ms-2">
                             <button class="btn btn-outline-dark link" type="submit">
-                                <a class="link" href="{% url 'register' %}">Sign up</a>
+                                <a class="link" href="{% url 'user:register' %}">Sign up</a>
                             </button>
                         </form>
                     {% endif %}
