--- a/templates/user/seller_request_approve.html
+++ b/templates/user/seller_request_approve.html
@@ -3,51 +3,51 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <!--Seller request details-->
-<section class="p-4 d-flex justify-content-center w-100">
-    <div class="card mb-3">
-        <img src="{{ SellerInfo.identity_certificate.url }}" height="600" width="800"  class="card-img-top" alt="Wild Landscape"/>
-        <div class="card-body">
-          <h5 class="card-title">{{SellerInfo.first_name}} {{SellerInfo.last_name}}</h5>
-          <p class="card-text">
-            {{ SellerInfo.national_code }}
-          </p>
-          <p class="card-text">
-            {{ SellerInfo.user_id }}
-          </p>
-          <p class="card-text">
-            Create a description for seller request model later
-          </p>
-          <p class="card-text">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </p>
-        </div>
-    </div>
-</section>
-<!--End of Seller request detail -->
-
-
-<!--User update form-->
-<div class="main-w3layouts wrapper">
-    <h1></h1>
-    <div class="main-agileinfo">
-        {% if form.non_field_errors %}
-            <div class="errors">
-                {% for error in form.non_field_errors %}
-                    <span>{{error}}</span>
-                {% endfor %}
-            </div>
-        {% endif %}
-        <div class="agileits-top">
-            <form class="form-group" method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{ form|crispy }}
-                <div class="wthree-text">
-                    <div class="clear"> </div>
+        <section class="justify-content-center d-flex p-1">
+            <div class="card">
+                <img src="{{ SellerInfo.identity_certificate.url }}" height="600" width="800"  class="card-img-top" alt="Wild Landscape"/>
+                <div class="card-body">
+                  <h5 class="card-title">{{SellerInfo.first_name}} {{SellerInfo.last_name}}</h5>
+                  <li class="list-group-item">National Code :{{ SellerInfo.national_code }}</li>
+                  <li class="list-group-item">Description :{{ SellerInfo.user_description }}</li>
+                  <li class="list-group-item">Submited at :{{ SellerInfo.created_at }}</li>
+                  <li class="list-group-item">User UUID :{{ SellerInfo.user_id }}</li>
                 </div>
-                <input type="submit" value="Confirm">
-            </form>
-        </div>
-    </div>
-</div>
-<!--End of User update form-->
+            </div>
+        </section>          
+        <section class="justify-content-center d-flex p-4">
+          <!--User update form-->
+          <div class="main-w3layouts wrapper">
+            <div class="main-agileinfo">
+              {% if form.non_field_errors %}
+                  <div class="errors">
+                      {% for error in form.non_field_errors %}
+                          <span>{{error}}</span>
+                      {% endfor %}
+                  </div>
+              {% endif %}
+              <div class="agileits-top">
+                  <form class="form-group" method="post" enctype="multipart/form-data">
+                      {% csrf_token %} 
+                      <div class="card mb-3">
+                        <div class="card-body">
+                          <li class="list-group-item">{{ form.username|as_crispy_field }}</li>
+                          <li class="list-group-item">{{ form.first_name|as_crispy_field }}</li>
+                          <li class="list-group-item">{{ form.last_name|as_crispy_field }}</li>
+                          <li class="list-group-item">{{ form.email|as_crispy_field }}</li>
+                          <li class="list-group-item">{{ form.date_joined|as_crispy_field }}</li>
+                          <li class="list-group-item">{{ form.admin_reject_reason|as_crispy_field }}</li>
+                          <li class="list-group-item">{{ form.is_staff|as_crispy_field }}</li>
+                          <li class="list-group-item">{{ form.is_seller|as_crispy_field }}</li>
+                          <input type="submit" value="Confirm">
+                        </div>
+                      </div>
+                  </form>
+              </div>
+            </div>
+          </div>
+          <!--End of User update form-->
+        </section>
+        
+<!--End of Seller request detail -->
 {% endblock %}
