--- a/templates/user/base.html
+++ b/templates/user/base.html
@@ -73,7 +73,10 @@
                         {% if user.is_superuser %}
                             <a class="collapse-item" href="{% url 'user:new-seller-requests' %}">New seller requests</a>
                         {% endif %}
+                        {% if user.is_seller == 'A' %}
                         <a class="collapse-item" href="{% url 'user:shop' %}">Your products</a>
+                        <a class="collapse-item" href="{% url 'user:add_product' %}">Add products</a>
+                        {% endif %}
                     </div>
                 </div>
             </li>
