--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -2,7 +2,18 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <!--User profile info-->
-              <div class="dropdown profile-container">
+            {% if user.is_authenticated %}
+            <!--Logout button-->
+            <div class="position-absolute top-10 end-0 me-4">
+                <a href="{% url 'user:logout' %}" style="margin-left: 10px;">
+                    <!--<img src="{% static '/base/assets/logout-svgrepo-com.svg' %}" style="height: 1%; width: 1%;"> -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="Black" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+                        <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+                    </svg>
+                </a>
+            </div>
+            <div class="dropdown profile-container">
                 <span class="dropdown-toggle mr-2 d-none d-lg-inline text-gray-600 small" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">{{ username }}
                     {% if user_profile %}
                         <img src="{{ user_profile.url }}" alt="Avatar" class="avatar" style="width: 50px; height: 50px; border-radius: 50%;">
@@ -14,7 +25,22 @@
                   <li><a class="dropdown-item" href="{% url 'user:profile' %}">Profile</a></li>
                   <li><a class="dropdown-item" href="{% url 'user:shop' %}">Your Shop</a></li>
                 </ul>
-              </div>
+            </div>
+            <!--User's cart-->
+            <div class="buttons ms-4">
+                <button class="btn btn-outline-dark d-flex" type="submit">
+                    <i class="bi-cart-fill me-1"></i>
+                    <span class="badge bg-dark text-white rounded-pill ">0</span>
+                </button>
+            </div>
+            {% else %}
+                <!--Register button-->
+                    <form class="d-flex ms-4">
+                        <button class="btn btn-outline-dark link" type="submit">
+                            <a class="link" href="{% url 'user:register' %}">Sign up</a>
+                        </button>
+                    </form>
+            {% endif %}
 
             <!--End of User profile info-->
             <div class="container px-4 px-lg-5">
@@ -37,32 +63,6 @@
                         </li>
                         <!--End of Shop specifying-->
                     </ul>
-                    
-                    {% if user.is_authenticated %}
-                    <!--User's cart-->
-                    <div class="buttons">
-                            <button class="btn btn-outline-dark" type="submit">
-                                <i class="bi-cart-fill me-1"></i>
-                                Cart
-                                <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                            </button>
-                    <!--Logout button-->
-                        <a href="{% url 'user:logout' %}" style="margin-left: 10px;">
-                            <!--<img src="{% static '/base/assets/logout-svgrepo-com.svg' %}" style="height: 1%; width: 1%;"> -->
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="Black" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
-                                <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
-                            </svg>
-                        </a>
-                    </div>
-                    {% else %}
-                    <!--Register button-->
-                        <form class="d-flex ms-2">
-                            <button class="btn btn-outline-dark link" type="submit">
-                                <a class="link" href="{% url 'user:register' %}">Sign up</a>
-                            </button>
-                        </form>
-                    {% endif %}
                 </div>
             </div>
         </nav>
