--- a/templates/user/base.html
+++ b/templates/user/base.html
@@ -34,11 +34,11 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="account.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'base:home' %}">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+                <div class="sidebar-brand-text mx-3">Kian's Shop</div>
             </a>
 
             <!-- Divider -->
@@ -72,6 +72,7 @@
                         <a class="collapse-item" href="{% url 'user:profile' %}">Profile</a>
                         {% if user.is_superuser %}
                             <a class="collapse-item" href="{% url 'user:new-seller-requests' %}">New seller requests</a>
+                            <a class="collapse-item" href="{% url 'user:new_products' %}">New products added</a>
                         {% endif %}
                         {% if user.is_seller == 'A' %}
                         <a class="collapse-item" href="{% url 'user:shop' %}">Your products</a>
