search by tags and name

--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -69,8 +69,8 @@
                     <form action="{% url 'base:home_search' %}">
                         {% csrf_token %}
                         <div class="input-group ms-lg-5">
-                            <button class="btn btn-primary" type="submit" id="button-addon1">Button</button>
-                            <input type="text" name = "SearchQuery" class="form-control" placeholder="Search by Name" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                            <button class="btn btn-primary" type="submit" id="button-addon1">Search</button>
+                            <input type="text" name = "SearchQuery" class="form-control" placeholder="Search Items" aria-label="Example text with button addon" aria-describedby="button-addon1">
                         </div>
                     </form>
                 </div>
