--- a/templates/user/shop.html
+++ b/templates/user/shop.html
@@ -1,5 +1,22 @@
 {% extends 'user/base.html' %}
 {% load static %}
+
+{% block search-bar %}
+<form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
+  action="{% url 'user:new_products_search' %}">
+  {% csrf_token %}
+    <div class="input-group">
+      <input type="text" name = "SearchQuery" class="form-control bg-light border-0 small" placeholder="Search for..."
+        aria-label="Search" aria-describedby="basic-addon2">
+      <div class="input-group-append">
+          <button class="btn btn-primary" type="button">
+            <i class="fas fa-search fa-sm"></i>
+          </button>
+      </div>
+    </div>
+</form>
+{% endblock %}
+
 {% block content %}
 <div class="container-fluid">               
     <!-- Page Heading -->
