--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -24,6 +24,7 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                   <li><a class="dropdown-item" href="{% url 'user:profile' %}">Profile</a></li>
                   <li><a class="dropdown-item" href="{% url 'user:shop' %}">Your Shop</a></li>
+                  <li><a class="dropdown-item" href="{% url 'user:seller_register' %}">Register As Seller</a></li>
                 </ul>
             </div>
             <!--User's cart-->
