--- a/templates/user/shop.html
+++ b/templates/user/shop.html
@@ -3,7 +3,7 @@
 
 {% block search-bar %}
 <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
-  action="{% url 'user:new_products_search' %}">
+  action="{% url 'user:shop_search' %}">
   {% csrf_token %}
     <div class="input-group">
       <input type="text" name = "SearchQuery" class="form-control bg-light border-0 small" placeholder="Search for..."
