--- a/templates/user/new_seller_requests.html
+++ b/templates/user/new_seller_requests.html
@@ -22,7 +22,7 @@
 <div class="container-fluid">               
     <!-- Page Heading -->
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">Profile</h1>
+        <h1 class="h3 mb-0 text-gray-800">New Seller</h1>
     </div>
     <div class="container mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-left">
