--- a/templates/base/view_product.html
+++ b/templates/base/view_product.html
@@ -66,14 +66,14 @@
                             <h3 class="">
                                 user_amount:{{ product.max_users }}
                             </h3>
-                        <p class="lead">{{product.description}}</p>
+                        <p class="lead">Description: {{product.description}}</p>
                         <div class="d-flex">
                             <button class="btn btn-outline-dark flex-shrink-0" type="button">
                                 <i class="bi-cart-fill me-1"></i>
                                 Add to cart
                             </button>
                             <button type="button" class="btn btn-secondary px-4 py-3" data-toggle="modal" data-target="#exampleModalCenter">
-                                Launch modal
+                                Report
                             </button>
                         </div>
                     </div> 
