--- a/static/base/css/navbar.css
+++ b/static/base/css/navbar.css
@@ -7,3 +7,12 @@
 .profile-container:hover{
     cursor: pointer;
 }
+
+.dropdown:hover>.dropdown-menu {
+    display: block;
+  }
+  
+.dropdown>.dropdown-toggle:active {
+    /*Without this, clicking will make it sticky*/
+      pointer-events: none;
+  }
