--- a/templates/base/list_page.html
+++ b/templates/base/list_page.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <!--Navbar with passing the profile pic-->
-        {% include 'base/navbar.html' with user_profile=user_profile username=username %}
+        {% include 'base/navbar.html' with user_profile=user_profile username=username cart=cart %}
         <!--Website Recents-->
         {% include 'base/header.html' %}
         <!-- Section-->
@@ -37,7 +37,10 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'base:product' product.id %}">View</a></div>
+                                <div class="text-center">
+                                    <a class="btn btn-outline-dark mt-auto" href="{% url 'base:product' product.id %}">View</a>
+                                    <a class="btn btn-outline-warning mt-auto" href="{% url 'base:add_to_cart' product.id %}">Add To Cart</a>
+                                </div>
                             </div>
                         </div>
                     </div>
