--- a/templates/user/new_product_added_approve.html
+++ b/templates/user/new_product_added_approve.html
@@ -21,13 +21,15 @@
                     <img class="card-img-top" src="{{product.pic_sample.url}}" width = "200" height="300" />
                     <li class="list-group-item">{{ form.pic_sample|as_crispy_field }}</li>
                     <li class="list-group-item">{{ form.product|as_crispy_field }}</li>
+                    <li class="list-group-item">{{ form.created_by|as_crispy_field }}</li>
                     <li class="list-group-item">{{ form.category|as_crispy_field }}</li>
                     <li class="list-group-item">{{ form.price|as_crispy_field }}</li>
                     <li class="list-group-item">{{ form.description|as_crispy_field }}</li>
                     <li class="list-group-item">{{ form.period|as_crispy_field }}</li>
                     <li class="list-group-item">{{ form.max_users|as_crispy_field }}</li>
                     <li class="list-group-item">{{ form.availability|as_crispy_field }}</li>
-                    <input type="submit" value="Confirm">
+                    <input type="submit" value="Confirm" class="btn btn-success">
+                    <a href="{% url 'user:product_delete_view' product.id %}" class="btn btn-danger" role="button">Delete</a>
                   </div>
                 </div>
             </form>
