--- a/templates/base/list_page.html
+++ b/templates/base/list_page.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <!--Navbar with passing the profile pic-->
-        {% include 'base/navbar.html' with user_profile=user_profile username=username cart=cart %}
+        {% include 'base/navbar.html' with user_profile=user_profile username=username cart=cart quantity=quantity %}
         <!--Website Recents-->
         {% include 'base/header.html' %}
         <!-- Section-->
