modifying database and models

--- a/templates/base/view_product.html
+++ b/templates/base/view_product.html
@@ -57,6 +57,8 @@
                             <!--<span class="text-decoration-line-through">$45.00</span>   class for off price -->
                             <div class="fs-5 mb-5">
                                 <span id="price">{{ product.price }}</span> USD
+                                <br>
+                                <span id="price">10% OFF {{ product.final_price }}</span> USD
                             </div>
                         </div>
                             <!--product specs-->
