--- a/templates/base/list_page.html
+++ b/templates/base/list_page.html
@@ -33,6 +33,8 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">{{product.product}}</h5>
+                                    <h5 class="fw-bolder">Price:{{product.price}}</h5>
+                                    <h5 class="fw-bolder">Price with off:{{product.final_price}}</h5>
                                 </div>
                             </div>
                             <!-- Product actions-->
